--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
 
+    def fragment_version = "1.2.4"
+        debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
+
+
+
 }
